testdata/baselines/reference/submodule/compiler/classAttributeInferenceTemplate.errors.txt
classAttributeInferenceTemplate.ts(16,14): error TS7008: Member 'property' implicitly has an 'any' type.
classAttributeInferenceTemplate.ts(17,14): error TS7008: Member 'property2' implicitly has an 'any' type.


==== classAttributeInferenceTemplate.ts (2 errors) ====
    class MyClass {
        property;
        property2;
    
        constructor() {
            const variable = 'something'
    
            this.property = `foo`; // Correctly inferred as `string`
            this.property2 = `foo-${variable}`; // Causes an error
    
            const localProperty = `foo-${variable}`; // Correctly inferred as `string`
        }
    }
    
    class MyClass2 {
        accessor property;
                 ~~~~~~~~
!!! error TS7008: Member 'property' implicitly has an 'any' type.
        accessor property2;
                 ~~~~~~~~~
!!! error TS7008: Member 'property2' implicitly has an 'any' type.
    
        constructor() {
            const variable = 'something'
    
            this.property = `foo`; // Correctly inferred as `string`
            this.property2 = `foo-${variable}`; // Causes an error
    
            const localProperty = `foo-${variable}`; // Correctly inferred as `string`
        }
    }
    